# MeanTerpreter

./: .gitignore  CMakeLists.txt  README.md  calculator.c  calculator.h  dict.c  dict.h  list.c  list.h  main.c  shunting-yard.c  shunting-yard.h  stack.c  stack.h  symboltable.c  symboltable.h  tokenizer.c  tokenizer.h
